examples/errors/07_bad_continue/bad_continue.txy
fn main(): int
  continue;
	return 0;
endfn;